[project]
name = "mongodb-network-types"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "click>=8.3.0",
    "pymongo>=4.15.1",
    "pytricia>=1.3.0",
    "treelib>=1.8.0",
]

[tool.ruff.lint]
extend-select = ["I"]
